--- a/app/components/placescard/placescard.module.css
+++ b/app/components/placescard/placescard.module.css
@@ -1,6 +1,6 @@
 /* Places Card Container */
 .placesCard {
-  background: white;
+  background: rgb(255, 247, 242);
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #fefefe;
+  background: rgb(255, 247, 242);
 }
 
 .cardHeader {
@@ -83,8 +83,13 @@
 }
 
 .restaurantType {
-  color: #6b1941;
-  font-weight: 500;
+  color: rgb(108, 108, 112);
+  font-weight: normal;
+}
+
+.restaurantType strong {
+  color: black;
+  font-weight: bold;
 }
 
 .locationIcon {
